openshift/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: web-application-deployment
  namespace: bharath
spec:
  replicas: 1
  selector:
    app: web-application-deployment
  template:
    metadata:
      labels:
        app: web-application-deployment
    spec:
      containers:
      - name: web-application-deployment
        image: web-application:latest
        ports:
        - containerPort: 4000
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - web-application-deployment
      from:
        kind: ImageStreamTag
        name: web-application:latest
