openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-application-service
spec:
  selector:
    app: web-application-deployment
  ports:
    - name: http
      port: 4000
      targetPort: 4000
