openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-application-route
spec:
  to:
    kind: Service
    name: web-application-service
  port:
    targetPort: 4000
  tls:
    termination: reencrypt
